; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_config.c_get_match.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_config.c_get_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.masks = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.masks*)* @get_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_match(i8* %0, %struct.masks* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.masks*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.masks* %1, %struct.masks** %5, align 8
  br label %6

6:                                                ; preds = %25, %2
  %7 = load %struct.masks*, %struct.masks** %5, align 8
  %8 = getelementptr inbounds %struct.masks, %struct.masks* %7, i32 0, i32 1
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %26

11:                                               ; preds = %6
  %12 = load i8*, i8** %4, align 8
  %13 = load %struct.masks*, %struct.masks** %5, align 8
  %14 = getelementptr inbounds %struct.masks, %struct.masks* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = call i64 @strcmp(i8* %12, i32* %15)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %11
  %19 = load %struct.masks*, %struct.masks** %5, align 8
  %20 = getelementptr inbounds %struct.masks, %struct.masks* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  store i32 %21, i32* %3, align 4
  br label %27

22:                                               ; preds = %11
  %23 = load %struct.masks*, %struct.masks** %5, align 8
  %24 = getelementptr inbounds %struct.masks, %struct.masks* %23, i32 1
  store %struct.masks* %24, %struct.masks** %5, align 8
  br label %25

25:                                               ; preds = %22
  br label %6

26:                                               ; preds = %6
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %26, %18
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i64 @strcmp(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
